# bug_do_mpr

./: .gitignore  CMakeLists.txt  IMPRView.h  MPRView.cpp  MPRView.h  Sistema.cpp  Sistema.h  diagrama experimento.zargo  dllInterface.cpp  dllInterface.h  loadVolume.cpp  loadVolume.h  main.cpp  myAfterReslicedImageGeneratedCallback.h  myLetraRenderPass.cpp  myLetraRenderPass.h  myQualityControllable.h  myResliceCursor.cxx  myResliceCursor.h  myResliceCursorActor.cxx  myResliceCursorActor.h  myResliceCursorCallback.cpp  myResliceCursorCallback.h  myResliceCursorLineRepresentation.cxx  myResliceCursorLineRepresentation.h  myResliceCursorPicker.cxx  myResliceCursorPicker.h  myResliceCursorPolyDataAlgorithm.cxx  myResliceCursorPolyDataAlgorithm.h  myResliceCursorRepresentation.cxx  myResliceCursorRepresentation.h  myResliceCursorThickLineRepresentation.cxx  myResliceCursorThickLineRepresentation.h  myResliceCursorWidget.cxx  myResliceCursorWidget.h  myResliceImageViewer.cxx  myResliceImageViewer.h  myResliceImageViewerMeasurements.cxx  myResliceImageViewerMeasurements.h
